--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "knex": "^0.19.5",
     "knex-cleaner": "^1.3.0",
     "morgan": "^1.9.1",
+    "pg": "^7.12.1",
     "sqlite": "^3.0.3"
   },
   "devDependencies": {},
