--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "helmet": "^3.21.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.5",
     "knex-cleaner": "^1.3.0",
     "morgan": "^1.9.1",
