--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cross-env": "^6.0.3",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
@@ -17,9 +18,16 @@
     "pg": "^7.12.1",
     "sqlite": "^3.0.3"
   },
-  "devDependencies": {},
+  "jest": {
+    "testEnvirnoment": "node",
+    "verbose":true
+  },
+  "devDependencies": {
+    "jest": "^24.9.0",
+    "supertest": "^4.0.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env DB_ENV=testing jest --watch",
     "server": "nodemon index.js",
     "start": "npm index.js"
   },
